--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ write a short JS tool, where user post a question to ai-models team. first will 
 
 keep ui modern and slick with team chat mode style - properly format the output of each reply.
 
-All will use one groq key (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) for all, just change models. 
+All will use one groq key '[your-groq-api-key]' for all, just change models. 
 Also test all model are getting correct output.
 
 models:
@@ -21,7 +21,7 @@ make one file solution.
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>AI‑Team Chat (2‑sec delay)</title>
+<title>AI Models Team Chat</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <style>
   :root {
@@ -58,7 +58,9 @@ make one file solution.
 
 <script>
 /* ==================== CONFIG ==================== */
-const GROQ_KEY = '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';
+
+// replace this with your groq key: https://console.groq.com
+const GROQ_KEY = '[your-api-groq-key]';
 const MODELS = [
   { name: 'meta-llama/llama-4-scout-17b-16e-instruct', turn:0, accepted:false },
   { name: 'openai/gpt-oss-120b',               turn:0, accepted:false },
